IMPALA-12295: Statestore crashed when restarting catalogd

Statestore hit DCHECK when re-registering catalogd when CatalogD
HA is not enabled. The number of catalogd should not be increased
when re-registering catalogd.
The issue could be re-produced for unit-test case
test_restart_services.py::TestRestart::test_restart_catalog with
increased value for statestore_heartbeat_frequency_ms.

Testing:
 - Verified the issue does not happen for unit-test case
   test_restart_services.py::TestRestart::test_restart_catalog.
 - Passed core test.

Change-Id: I031f0c6d895601e7ea8b15005a3ad52bd3254e7c
Reviewed-on: http://gerrit.cloudera.org:8080/20217
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Reviewed-by: Wenzhe Zhou <wzhou@cloudera.com>